Added connections to visualize function

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<script src="libraries/p5.dom.js"></script>
 	<script src="libraries/p5.sound.js"></script>
 	<script src="constants.js"></script>
+	<script src="coordinate.js"></script>
 	<script src="node.js"></script>
 	<script src="connection.js"></script>
 	<script src="brain.js"></script>
