Added population to project, created constructor and innovation number

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<script src="node.js"></script>
 	<script src="connection.js"></script>
 	<script src="brain.js"></script>
+	<script src="population.js"></script>
 	<script src="sketch.js"></script>
 
 	<style>
